tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__LooktotheEdges-AAAAAAAAAAAAAAAAAAAAGw==__MovingFaster-AAAAAAAAAAAAAAAAAAAGLQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1581,
  "prerequisites": [
    1578
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Dream Weaver of Fleet Foot will add a speed boost to a player when they wake up from a good night's sleep.\n\nIf the dream weaver is corrupted by a nearby Dream Weaver of Nightmares, the weaver will instead add a slowdown effect to the player.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Moving Faster!",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1578
  ],
  "rewards": [],
  "tasks": []
}
