tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__LooktotheEdges-AAAAAAAAAAAAAAAAAAAAGw==__MutandisExtremis-AAAAAAAAAAAAAAAAAAAJIA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2336,
  "prerequisites": [
    1555
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Mutandis Extremis is an upgraded version of Mutandis that is used by witches and warlocks to mutate plants into other species. Mutandis Extremis has all the same properties as basic Mutandis but it can even be used on multi-stage plants like wheat, cactus, etc. and can also mutate cooked meat.\n\nIf Mutandis Extremis is used on a Grass block there is a chance it will mutate it into Mycelium and vice versa.\n\nIf Mutandis Extremis is used on an underwater dirt block there is a chance it will mutate it (and nearby dirt) into clay blocks.\n\nMutating plants is the only way to acquire Rowan, Hawthorn and Alder saplings.\n\nSome recipes require Mutandis Extremis as an ingredient.\n\nMutandis is crafted using Mutandis and Nether Wart.\n\n[note]Some cauldron recipes require altar power. This is one of them. Make sure you read the Witches' Brews book.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Mutandis Extremis",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1555
  ],
  "rewards": [],
  "tasks": []
}
