tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__LooktotheEdges-AAAAAAAAAAAAAAAAAAAAGw==__MutateYourSaplin-AAAAAAAAAAAAAAAAAAAGEw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1555,
  "prerequisites": [
    334
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Mutandis is a mutagen that is used by witches and warlocks to mutate plants into other species. Simply use Mutandis on small plants, grass, flowers, saplings, etc. and it will be randomly converted to another plant. Mutandis cannot mutate multi-stage plants like wheat and cactus.\n\nMutating plants is the only way to acquire Rowan, Hawthorn and Alder saplings.\n\nMutandis has another interesting property when crafted with raw meat. It seems to mutate it into another type of raw meat. It even seems to have an effect on Rotten Flesh.\n\nSome recipes require Mutandis as an ingredient.\n\nMutandis can be upgraded to Mutandis Extremis to have an effect on a wider variety of plants.\n\nMutandis is made in a Witches' Cauldron using Mandrake Root, Exhale of the Horned One and an Egg.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Mutate Your Saplings",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    334
  ],
  "rewards": [],
  "tasks": []
}
