tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__LooktotheEdges-AAAAAAAAAAAAAAAAAAAAGw==__MutatedSaplings-AAAAAAAAAAAAAAAAAAAGFQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1557,
  "prerequisites": [
    1555
  ],
  "properties": {
    "auto_claim": false,
    "desc": "These saplings can initially be acquired only by using Mutandis on a valid block, such as a sapling, grass, etc.\n\nYou can cook them in the oven for unique fume types:\nRowan: Whiff of Magic\nHawthorn: Odour of Purity\nAlder: Reek of Misfortune\n\nRowan trees drop Rowan Berries, and you'll need to get some Alder Wood for your altar.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Mutated Saplings",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1555
  ],
  "rewards": [],
  "tasks": []
}
